-fixed scrollbar not scrolling to the bottom of album/playlist..

--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,8 @@
 /* Custom scrollbar */
 /* width */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 8px;
+  padding-right:8px;
 }
 
 /* Track */
